...
                                                    <constraint firstAttribute="width" constant="46" id="OxM-su-BkU"/>
                                                </constraints>
                                                <state key="normal" title="Back">
                                                    <color key="titleColor" red="0.98544973540000003" green="0.97637658189999998" blue="0.94915712139999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
...
                                                <rect key="frame" x="129" y="369" width="116" height="30"/>
                                                <color key="backgroundColor" red="0.96862745289999996" green="0.96107782350000004" blue="0.91110634779999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="loginButton" label="loginBut"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="116" id="ILQ-z0-5bQ"/>
...
                                    <constraint firstAttribute="height" constant="50" id="ud1-Pv-gLH"/>
                                </constraints>
                                <state key="normal" title="Button" image="fabCoffee"/>
                                <connections>
                                    <action selector="fabClick:" destination="Xap-2O-fN6" eventType="touchUpInside" id="eNS-21-ihX"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3In-T9-I7v">
                                        <rect key="frame" x="11" y="11" width="153" height="30"/>
                                        <state key="normal" title="Profilindstillinger">
                                            <color key="titleColor" red="0.99602122015915118" green="0.99602122015915118" blue="0.99602122015915118" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AWJ-ng-Dva">
                                        <rect key="frame" x="11" y="71" width="153" height="30"/>
                                        <state key="normal" title="Logud">
                                            <color key="titleColor" red="0.9748010610079576" green="0.9748010610079576" blue="0.9748010610079576" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="GiG-s0-8iT" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Kort" image="ic_place_36pt" id="toC-bc-IaQ">
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
...
            <objects>
                <navigationController storyboardIdentifier="homeCtrl" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Gf0-ZE-gDU" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Hjem" image="ic_home" id="JBF-rH-6vg"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="6AF-aJ-Nsd">
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="x1q-ZW-hnj" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Klippekort" image="ic_redeem_white" id="8Qd-uL-3fc"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="lzP-py-WkR">
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Kgf-7q-Iy5" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Premium" image="premium-4-white-90px_alpha" selectedImage="premium-4-white-90px_alpha" id="aeD-12-U5b"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="h73-Q0-4eJ">
...
